--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,9 @@
   <div class="container">
     <div class="notice"><%= notice %></div>
     <div class="alert"><%= alert %></div>
-    <div>Welcome <%= current_user.email %>!</div>
+    <% if user_signed_in? %>
+      <div>Welcome <%= current_user.email %>!</div>
+    <% end %>
   </div>
 
   <%= yield %>
